# opengl-starter

./: CMakeLists.txt  vcpkg.json
connor_assets/lowpoly_jet/: scene.gltf
opengl_starter/: CMakeLists.txt  CSCE649_HW1.cpp  CSCE649_HW2.cpp  CSCE649_HW3.cpp  CSCE649_HW4.cpp  CSCE649_HW5.cpp  CSCE649_Project.cpp  ClassSample.cpp  Window.h
shaders/: default.fs  default.vs  planet.fs  shot.fs  soft_body.fs
